manifests/base/apps/jwt-request-auth.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: jwt-auth
  namespace: business-app
spec:
  selector:
    matchLabels:
      app: workspace-service
  jwtRules:
  - issuer: "http://keycloak.identity.svc.cluster.local:8080/realms/smartsheet-dev"
    jwksUri: "http://keycloak.identity.svc.cluster.local:8080/realms/smartsheet-dev/protocol/openid-connect/certs"
