manifests/base/apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics-tier
  labels:
    istio.io/dataplane-mode: ambient
