manifests/base/apps/workspace-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-service
  namespace: business-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace-service
  template:
    metadata:
      annotations:
          traffic.sidecar.istio.io/excludeOutboundPorts: "443"
      labels:
        app: workspace-service
    spec:
      serviceAccountName: workspace-service-sa
      automountServiceAccountToken: true
      containers:
        - name: workspace-service
          image: workspace-service:7005c64
