manifests/base/apps/workspace-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: workspace-service
  namespace: business-app
  labels:
    app: workspace-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: workspace-service
