manifests/base/apps/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: analytics-waypoint
  namespace: analytics-tier
  annotations:
    istio.io/service-account: analytics-service-account
spec:
  gatewayClassName: istio-waypoint
  listeners:
  - name: mesh
    port: 15008
    protocol: HBONE
